--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Internet Provider</title>
+    <link rel="stylesheet" href="styles/style.css">
 
 </head>
 <body>
@@ -11,7 +12,7 @@
             <li><a href="#about">About US</a></li>
             <li><a href="#home">For Home</a></li>
             <li><a href="#business">Business</a></li>
-            <li><a href="#check">Help</a></li>
+            <li><a href="#check">Avalability</a></li>
             <li><a href="#help">Help</a></li>
 
         </ul>
