--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <title>Internet Provider</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,13 +29,14 @@
     </header>
     <main>
         <section class="logo">
-            <h1>Rigacom</h1>
+            <div class="logo-div"><h1>Rigacom</h1></div>
         </section>
         <section id="about">
             <div class="heading"><h2>Office Building</h2></div>
+            <div class="aboutus">
             <div class="office content">
                 <h3>Office </h3>
-                <img src="styles/img/office.jpeg" alt="Office">
+                <div class="fleximg"><img src="styles/img/office.jpeg" alt="Office"></div>
                 <p>In 2008, when the company’s team overgrew the old office and every 
                     morning you could find two more colleagues sitting in your chair – 
                     we decided to look for a new home. Initially, our first architectural
@@ -41,7 +48,7 @@
             </div>
             <div class="service content">
                 <h3>Customer Service Center</h3>
-                <img src="styles/img/Teherani-Eppendorf-05.jpg" alt="Service center">
+                <div class="fleximg"><img src="styles/img/Teherani-Eppendorf-05.jpg" alt="Service center"></div>
                 <p>Our customer service centre is a warm and cosy place – over 150 people visit it daily. 
                     We are especially pleased when clients visit us with their children – we even have a 
                     small play corner for kids to draw and read.
@@ -53,7 +60,7 @@
             </div>
             <div class="new_connections content">
                 <h3>New Connections Department</h3>
-                <img src="styles/img/stockfresh_8245621_female-customer-services-agent-in-call-center_sizeS.jpg" alt="New Connections Department">
+                <div class="fleximg"><img src="styles/img/stockfresh_8245621_female-customer-services-agent-in-call-center_sizeS.jpg" alt="New Connections Department"></div>
                 <p>In the department of new connections, a telephone is the main working tool – our operators 
                     process up to 500 calls per day. Can you imagine that? On average, each employee in this 
                     department wears out 2 telephones per year.
@@ -65,7 +72,7 @@
             </div>
             <div class="business_customer content">
                 <h3>Business Customer Department</h3>
-                <img src="styles/img/imgg.jpg" alt="Business Customer Department">
+                <div class="fleximg"><img src="styles/img/imgg.jpg" alt="Business Customer Department"></div>
                 <p>It's one thing to find an individual solution for a client, connect him to the services, provide
                      an interrupted Internet and television connection. And it’s a completely different thing – if 
                      your client is not one person, but an entire company. For the best business solutions, they 
@@ -75,7 +82,7 @@
             </div>
             <div class="technical content">
                 <h3>Technical Department 24/7</h3>
-                <img src="styles/img/images.jpg" alt="">
+                <div class="fleximg"><img src="styles/img/images.jpg" alt=""></div>
                 <p>Even after a short work experience in the department, our round-the-clock technical assistance 
                     operators can easily obtain an extra education in psychology — sometimes clients contact the 
                     technical department, because they are in need of psychological support due to the loss of the
@@ -83,6 +90,7 @@
                      TV problem like: “I can't find my remote!” In any case, customer problems are solved with all 
                      care and seriousness.</p>
             </div>
+        </div>
         </section>
         <section id="home">
             <h2>Internet and Television in Riga and Riga District from 6 euros per month</h2>
