--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         </section>
         <section id="home">
             <h2>Internet and Television in Riga and Riga District from 6 euros per month</h2>
+            <div class="list">
             <ul>
                 <li><h4>Bundles</h4></li>
                 <li><h4>Internet</h4></li>
@@ -102,15 +103,18 @@
                 <li><h4>Agreement for 24 months</h4></li>
                 <li><h4>Open-ended agreement</h4></li>
                 <li><h4>Tariffs for pensioners</h4></li>
-                <div class="text_disc">
+                
+            </ul>
+        </div>
+            <div class="text_disc">
                     <p>If You need help in choosing the best tariff
                          or connection advice, our managers will be happy to assist You. Call or leave a request!</p>
                 </div>
-            </ul>
 
         </section>
         <section id="business">
             <h2>Internet for Business</h2>
+            <div class="list">
             <ul>
                 <li><h4>Broadband speed guarantee</h4></li>
                 <li><h4>Identical Upload and Download</h4></li>
@@ -118,6 +122,7 @@
                 <li><h4>Private optical network</h4></li>
                 <li><h4>Enhanced security of private and public networks</h4></li>
             </ul>
+        </div>
         </section>
         <section id="check">
             <div class="box">
