--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
+<script src="/script.js"></script>
+
 </head>
 <body>
     <header>
     <nav>
         <ul>
-            <li><a href="#about">About US</a></li>
-            <li><a href="#home">For Home</a></li>
-            <li><a href="#business">Business</a></li>
-            <li><a href="#check">Avalability</a></li>
-            <li><a href="#help">Help</a></li>
+            <li id="script"><a href="#about">About US</a></li>
+            <li id="script"><a href="#home">For Home</a></li>
+            <li id="script"><a href="#business">Business</a></li>
+            <li id="script"><a href="#check">Avalability</a></li>
+            <li id="script"><a href="#help">Help</a></li>
 
         </ul>
     </nav>
@@ -150,9 +153,9 @@
             </nav>
 
         <div class="social_network">
-            <img src="styles/img/11.png" alt="twitter">
-            <img src="styles/img/12.jpg" alt="instagram">
-            <img src="styles/img/13.png" alt="facebook">
+            <a href="twitter.com"><img src="styles/img/11.png" alt="twitter"></a>
+            <a href="instagram.com"><img src="styles/img/12.jpg" alt="instagram"></a>
+            <a href="facebook.com"><img src="styles/img/13.png" alt="facebook"></a>
         </div>
 
         <div class="copyright">
